@@ -3,5 +3,6 @@
   "name": "PhotoFormats",
   "namespace": "com.linkedin.restli.example",
   "doc": "enum type for photo formats",
-  "symbols": [ "BMP", "JPG", "PNG" ]
+  "symbols": [ "BMP", "JPG", "PNG" ],
+  "symbolDocs": { "BMP":"Bitmap", "JPG":"Joint Photographic Experts Group", "PNG": "Portable Network Graphics" }
 }
